:meat_on_bone: still more bungling around TODO: * investigate using promises approach * create readme

--- a/app/index.html
+++ b/app/index.html
@@ -12,30 +12,18 @@
 <body>
   <h1>matching game</h1>
   <main class="board">
-    <div class="card">
-      <div class="card face-up">
-        <svg>
-          <use xlink:href="#frontOfCard" />
-        </svg>
-      </div>
-      <div class="card face-down">
-        <svg>
-          <use xlink:href="#backOfCard" />
-        </svg>
-      </div>
-    </div>
+
   </main>
 </body>
-<svg>
+<svg class="svg-definition">
   <defs>
-    <symbol id="backOfCard" viewBox="0 0 100 100">
-      <circle cx="0" cy="50" r="50" />
+    <symbol id="backOfCard" viewBox="0 0 25 25">
+      <circle cx="0" cy="25" r="25" />
     </symbol>
-    <symbol id="frontOfCards" viewBox="0 0 100 100">
-      <circle cx="0" cy="0" r="95" />
+    <symbol id="frontOfCards">
+      <circle cx="50" cy="50" r="50" />
     </symbol>
   </defs>
-
 </svg>
 
 <script src="index.js"></script>
