--- a/app/index.html
+++ b/app/index.html
@@ -15,19 +15,16 @@
 
   </main>
 </body>
-<svg class="svg-definition">
+<svg class="svg-definition" xmlns="http://www.w3.org/2000/svg">
   <defs>
-    <symbol id="backOfCard" viewBox="0 0 25 25">
-      <circle cx="0" cy="25" r="25" />
+    <symbol id="backOfCard">
+      <circle cx="0" cy="100" r="100" />
     </symbol>
     <symbol id="frontOfCards">
       <circle cx="50" cy="50" r="50" />
     </symbol>
   </defs>
 </svg>
-<!--
 <script src="index.js"></script>
--->
-<script src="cardLogic.js"></script>
 
 </html>
